# Note: This crate must be built using do.sh

[package]
name = "serum_assert_owner"
version = "0.2.0"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
solana-program = "2.1.6"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_assert_owner"

[dev-dependencies]
