[package]
name = "serum-common"
version = "0.2.0"
description = "Serum common utilities"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["solana-sdk/program", "solana-program"]
client = ["solana-sdk/default", "solana-client", "anyhow", "rand", "serde_json", "bs58", "bincode"]
strict = []
devnet = []
default = []

[dependencies]
spl-token = { version = "7.0.0", default-features = false }
arrayref = "0.3.9"
serde = { version = "1.0.216", features = ["derive"] }
solana-sdk = { version = "2.1.6", default-features = false }
serum-borsh = "0.8.1-serum.1"
#borsh = "1.5.3"

# Program only.
solana-program = { version = "2.1.6", optional = true }

# Client only.
anyhow = { version = "1.0.94", optional = true }
rand = { version = "0.7.3", optional = true }
solana-client = { version = "2.1.6", optional = true }
serde_json = { version = "1.0.133", optional = true }
bs58 = { version = "0.5.1", optional = true }
bincode = { version = "1.3.3", optional = true }
