[package]
name = "serum_dex"
version = "0.6.10"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[features]
program = []
client = []
fuzz = ["arbitrary"]
test = []
default = ["program"]
no-entrypoint = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
solana-program = "2.1.6"
solana-security-txt = "1.1.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
serde = "1.0.216"
itertools = "0.13.0"
without-alloc = "0.2.2"
num_enum = "0.7.3"
static_assertions = "1.1.0"
bincode = "1.3.3"
enumflags2 = "0.7.10"
field-offset = "0.3.6"
thiserror = "2.0.7"
safe-transmute = "0.11.3"
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
num-traits = "0.2.19"
arrayref = "0.3.9"
bytemuck = "1.20.0"
byteorder = "1.5.0"
default-env = "0.1.1"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
rand = "0.8.5"
hexdump = "0.1.2"
proptest = "1.6.0"
proptest-derive = "0.5.1"
bumpalo = { version = "3.16.0", features = ["collections"] }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.test]
opt-level = 2
