[package]
name = "crank"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "crank"
path = "src/bin/main.rs"

[dependencies]
serum_dex = { path = "../", default-features = false, features = ["client", "program"] }
serum-common = { path = "../../common", features = ["client"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"], default-features = false }
clap = { version = "4.0.53", features = ["derive"] }
enumflags2 = "0.7.10"
solana-client = "2.1.6"
solana-sdk = "2.1.6"
anyhow = "1.0.94"
rand = "0.7.3"
safe-transmute = "0.11.3"
threadpool = "1.8.1"
sloggers = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
log = "0.4.22"
debug_print = "1.0.0"
tokio = {version = "1.42.0", features = ["full"]}
warp = "0.3.7"